--- a/main.css
+++ b/main.css
@@ -6,7 +6,10 @@
   --text-color: #6B6B6B;
   --text-color-lite: #AAAAAA;
   --input-text-color: #A6A6A6;
+  --input-focus-bg: rgba(0, 142, 244, 0.1);
+  --input-focus-color: #444444;
   --label-color: #BBBBBB;
+  --red: #E00404;
 }
 
 *,
@@ -66,12 +69,15 @@ ul {
     margin-top: 2rem;
     color: var(--text-color-lite);
 }
+.form{
+  margin-top: 2rem;
+}
 .bodywrap__form__title{
     font-size: 3.5rem;
     color: #000000;
     font-weight: 700;
     margin-top: 7rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 .form__input-wrap{
   margin-top: 2rem;
@@ -93,6 +99,10 @@ input{
   padding: 1rem;
   width: 100%;
 }
+input:focus { 
+  background-color: var(--input-focus-bg);
+  color: var(--input-focus-color);
+}
 .form__cta-wrap{
   width: 100%;
   display: flex;
@@ -104,15 +114,39 @@ input{
   min-width: 10rem;
   border-radius: .5rem;
   font-size: 1.6rem;
-  padding: .5rem;
+  padding: .8rem;
   text-align: center;
   cursor: pointer;
+  outline: none;
+  border: none;
+  display: inline-block;
 }
 .btn-blue{
   background: var(--primary-color);
   color: #fff;
 }
+.btn-blue:hover{
+  -webkit-box-shadow: 5px 8px 5px var(--input-focus-bg);
+  -moz-box-shadow: 5px 8px 5px var(--input-focus-bg);
+  box-shadow: 5px 8px 5px var(--input-focus-bg);
+}
 .btn-outlineless-blue{
   color: var(--primary-color);
   background: transparent;
+}
+.err{
+  background: rgba(255, 4, 4, 0.09);
+  border: 1px solid rgba(255, 0, 0, 0.379331);
+  border-radius: .5rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: .5rem;
+  color: var(--red);
+  font-size: 1.4rem;
+  visibility: hidden;
+}
+.err img{
+  margin-right: 1rem;
 }
