--- a/main.css
+++ b/main.css
@@ -78,6 +78,7 @@ ul {
     font-weight: 700;
     margin-top: 7rem;
     margin-bottom: 1rem;
+    line-height: 1.2;
 }
 .form__input-wrap{
   margin-top: 2rem;
@@ -139,14 +140,16 @@ input:focus {
   border: 1px solid rgba(255, 0, 0, 0.379331);
   border-radius: .5rem;
   width: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
   padding: .5rem;
   color: var(--red);
   font-size: 1.4rem;
-  visibility: hidden;
+  display: none;
 }
 .err img{
   margin-right: 1rem;
+}
+#resetFrm{
+  display: none;
 }
