--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
   --input-focus-color: #444444;
   --label-color: #BBBBBB;
   --red: #E00404;
+  --green: #47b247;
 }
 
 *,
@@ -115,7 +116,7 @@ input:focus {
   min-width: 10rem;
   border-radius: .5rem;
   font-size: 1.6rem;
-  padding: .8rem;
+  padding: .8rem 1.5rem;
   text-align: center;
   cursor: pointer;
   outline: none;
@@ -135,19 +136,27 @@ input:focus {
   color: var(--primary-color);
   background: transparent;
 }
-.err{
-  background: rgba(255, 4, 4, 0.09);
-  border: 1px solid rgba(255, 0, 0, 0.379331);
+.notify{
   border-radius: .5rem;
   width: 100%;
   justify-content: center;
   align-items: center;
   padding: .5rem;
-  color: var(--red);
   font-size: 1.4rem;
+}
+.notify-err{
+  background: rgba(255, 4, 4, 0.09);
+  border: 1px solid rgba(255, 0, 0, 0.379331);
+  color: var(--red);
   display: none;
 }
-.err img{
+.notify-success{
+  background: rgba(102, 255, 102, 0.09);
+  border: 1px solid rgba(102, 255, 102, 0.379331);
+  color: var(--green);
+  display: none;
+}
+.notify-err img, .notify-success img{
   margin-right: 1rem;
 }
 #resetFrm{
